spacing issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -96,14 +96,14 @@ a {
   justify-content: center;
   align-items: flex-start;
   margin-bottom: 20px;
-  width: 600px;
+  width: 100%;
   padding: 1em;
   border-radius: 10px;
 }
 
 .main-container {
   display: flex;
-  margin-left: -4em;
+  margin-left: 0;
 }
 
 .content-container {
@@ -116,7 +116,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  max-width: 100%;
+  max-width: 50%;
   margin: 30px;
 }
 
@@ -239,7 +239,7 @@ h3 {
   margin-top: 7em;
 }
 
-.quote span {
+.quote .role {
   color: #6b7280;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1rem;
